# FalconCalc

./: .gitignore  FalconCalc.pro  FalconCalc.sln  Makefile  README.md  calculator.psd  tr.sh
FalconCalcQt/: AboutDialog.h  AboutDialog.ui  FCSettings.cpp  FCSettings.h  FalconCalcQt.cpp  FalconCalcQt.h  FalconCalcQt.pro  FalconCalcQt.qrc  FalconCalcQt.rc  FalconCalcQt.ui  FalconCalcQt.vcxproj  FalconCalcQt.vcxproj.filters  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  HistoryDialog.cpp  HistoryDialog.h  HistoryDialog.ui  HistoryOptions.cpp  HistoryOptions.h  HistoryOptions.ui  LocaleDlg.cpp  LocaleDlg.h  LocaleDlg.ui  Makefile  SmartStringQt.h  VarFuncDefDialog.h  VarFuncDefDialog.ui  VariablesFunctionsDialog.cpp  VariablesFunctionsDialog.h  VariablesFunctionsDialog.ui  main.cpp  resource.h  schemes.cpp  schemes.h  styeStr.val
FalconCalcQt/translations/: FalconCalcQt_en.ts  FalconCalcQt_hu.qm  FalconCalcQt_hu.ts
nlib/: CMakeLists.txt  ablakok.rc  ablakok.sln  ablakok.vcxproj  ablakok.vcxproj.filters  application.cpp  application.h  buttons.cpp  buttons.h  canvas.cpp  canvas.h  comdata.cpp  comdata.h  controlbase.cpp  controlbase.h  dialog.cpp  dialog.h  events.h  filestream.cpp  filestream.h  general.cpp  general.h  generalcontrol.cpp  generalcontrol.h  genericfile.h  graphiccontrol.cpp  graphiccontrol.h  gridbase.cpp  gridbase.h  helperwindows.cpp  helperwindows.h  imagelist.cpp  imagelist.h  images.cpp  images.h  inifile.cpp  inifile.h  kbd64.h  main.cpp  manifest.xml  (+24 more)
nlib/designer/: designer.cpp  designer.h  designercontrols.cpp  designercontrols.h  designerdialogs.cpp  designerdialogs.h  designerform.cpp  designerform.h  designermenu.cpp  designermenu.h  designeroptions.cpp  designeroptions.h  designio.cpp  designio.h  designproperties.cpp  designproperties.h  designregistry.cpp  designregistry.h  projectsettings.cpp  projectsettings.h  property_buttons.h  property_canvas.h  property_controlbase.h  property_dialog.h  property_generalcontrol.h  property_graphiccontrol.h  property_gridbase.h  property_imagelist.h  property_images.h  property_menu.h  property_objectbase.h  property_screen.h  property_syscontrol.h  property_toolbars.h  resource.h  resunzip.cpp  resunzip.h  serializer.cpp  serializer.h  stdafx.cpp
src/: CMakeLists.txt  EngineErrors.cpp  FalconCalc.aprj  FalconCalc.cfg  FalconCalc.cpp  FalconCalc.vcxproj  FalconCalc.vcxproj.filters  FalconCalc_.aprj  FalconCalc_later.aprj  LongNumber.cpp  LongNumber.h  SmartString.cpp  SmartString.h  TStringList.cpp  TStringlist.h  VFDefDialog.cpp  VFDefDialog.h  Zoli.props  about.cpp  about.h  calculate.cpp  calculate.h  clipboard.h  common.h  defines.h  engineErrors.h  frmLocale.cpp  frmLocale.h  graphictext.cpp  graphictext.h  help.cpp  help.h  histopt.cpp  histopt.h  history.cpp  history.h  main.cpp  main.h  mainForm.cpp  mainForm.h  (+18 more)
